fixed dark mode bugs

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,15 @@
 *{ 
     font-family: Outfit;  
 }
+
+/* activates dark mode in tailwind css */
+@custom-variant dark (&:where(.dark, .dark *));
+@theme {
+    --color-primary: #3b82f6; 
+    --color-primary-dark: #11001F; 
+
+    --color-lightHover: #fcf4ff;
+    --color-darkHover: #2a004a;
+    --color-darkTheme: #11001F;  
+}   
+
